--- a/ci/tests/api-functionality/docker-compose.yml
+++ b/ci/tests/api-functionality/docker-compose.yml
@@ -2,12 +2,11 @@ version: "3"
 services:
   redis:
     image: redis
-      
+
   gw:
     image: tykio/tyk-gateway:${tag}
     volumes:
-      - ./testplugin/testplugin.so:/opt/tyk-gateway/middleware/testplugin.so
-      - ./testplugin/apidef.json:/opt/tyk-gateway/apps/testplugin.json
+      - ./data/api.json:/opt/tyk-gateway/apps/api.json
     ports:
       - "0.0.0.0:8080:8080"
     environment:
