--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -58,6 +58,11 @@ jobs:
         uses: actions/checkout@v3
         with:
           fetch-depth: 1
+
+      # Fix the issue reported here: https://github.com/actions/runner-images/issues/6775
+      - name: Fix dubious ownership error when running on containers.
+        run: git config --global --add safe.directory $GITHUB_WORKSPACE
+
       - uses: docker/setup-qemu-action@v2
 
       - uses: docker/setup-buildx-action@v2
