Add vendor to extra files - plugin compiler image.

--- a/ci/goreleaser/goreleaser.yml
+++ b/ci/goreleaser/goreleaser.yml
@@ -166,6 +166,7 @@ dockers:
     - testdata
     - trace
     - user
+    - vendor
 
 docker_manifests:
   - name_template: tykio/tyk-gateway:{{ .Tag }}
