--- a/ci/tests/python-plugins/docker-compose.yml
+++ b/ci/tests/python-plugins/docker-compose.yml
@@ -27,7 +27,7 @@ services:
     environment:
       - TYK_LOGLEVEL=debug
     healthcheck:
-      test: curl -s --fail http://localhost:8080/hello | grep -o '.*"status":"pass".*"status":"pass"'
+      test: wget -q --output-document - http://localhost:8080/hello | grep -o '.*"status":"pass".*"status":"pass"'
       interval: 5s
       retries: 10
       start_period: 2s
