Add conditions for release workflow triggers

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -15,7 +15,10 @@
 name: Release
 
 on:
-  pull_request:
+  workflow_dispatch:
+  paths:
+    - '.github/workflows/release.yml'
+    - 'ci/**'
   push:
     branches:
       - master
