--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -242,6 +242,7 @@ jobs:
           --title-link 'https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }}'
 
   upgrade-deb:
+    if: startsWith(github.ref, 'refs/tags')
     runs-on: ubuntu-latest
     needs: goreleaser
     strategy:
@@ -300,6 +301,7 @@ jobs:
           docker run --rm test-${{ matrix.distro }}-${{ matrix.arch }}
 
   upgrade-rpm:
+    if: startsWith(github.ref, 'refs/tags')
     needs: goreleaser
     runs-on: ubuntu-latest
     strategy:
