--- a/.github/workflows/ci-tests.yml
+++ b/.github/workflows/ci-tests.yml
@@ -21,7 +21,7 @@ jobs:
       matrix:
         redis-version: [5]
         python-version: ['3.9']
-        go: [1.16]
+        go-version: [1.19.x]
 
     steps:
       - name: Checkout Tyk
@@ -32,7 +32,7 @@ jobs:
       - name: Setup Golang
         uses: actions/setup-go@v2
         with:
-          go-version: ${{ matrix.go }}
+          go-version: ${{ matrix.go-version }}
 
       - name: Setup Python
         uses: actions/setup-python@v4
