--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -71,6 +71,9 @@ jobs:
 
       - uses: docker/setup-buildx-action@v2
 
+      - name: "Add Git safe.directory" # Go 1.18+ started embedding repo info in the build
+        run: git config --global --add safe.directory /__w/tyk/tyk
+
       - name: Login to DockerHub
         if: startsWith(github.ref, 'refs/tags')
         uses: docker/login-action@v2
