test fix: missing go.sum entry for a vendored dependency in plugin-compiler

--- a/ci/images/plugin-compiler/Dockerfile
+++ b/ci/images/plugin-compiler/Dockerfile
@@ -17,7 +17,7 @@ COPY ci/images/plugin-compiler/data/build.sh /build.sh
 RUN chmod +x /build.sh
 
 COPY . $TYK_GW_PATH
-RUN cd $TYK_GW_PATH && go mod vendor
+RUN cd $TYK_GW_PATH && go mod tidy && go mod vendor
 
 ENTRYPOINT ["/build.sh"]
 
