Fix use-before-declare matrix.go-version reference

--- a/.github/workflows/ci-tests.yml
+++ b/.github/workflows/ci-tests.yml
@@ -14,7 +14,7 @@ env:
 
 jobs:
   test:
-    name: Go ${{ matrix.go }} Redis ${{ matrix.redis-version }}
+    name: Go ${{ matrix.go-version }} Redis ${{ matrix.redis-version }}
     runs-on: ubuntu-latest
     strategy:
       fail-fast: true
