--- a/.taskfiles/codegen.yml
+++ b/.taskfiles/codegen.yml
@@ -4,8 +4,8 @@ version: '3'
 tasks:
   default:
     desc: Run all code generation steps
-    deps:
-      - jsonnet
+    cmds:
+      - task: jsonnet
 
   jsonnet:
     desc: Generate github actions with jsonnet
