--- a/.github/workflows/ci-tests.yml
+++ b/.github/workflows/ci-tests.yml
@@ -21,7 +21,7 @@ jobs:
       matrix:
         redis-version: [5]
         python-version: ['3.9']
-        go-version: [1.16, 1.19.x]
+        go-version: [1.19.x]
 
     steps:
       - name: Checkout Tyk
