--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -238,7 +238,7 @@ jobs:
           --title-link 'https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }}'
 
   upgrade-deb:
-    if: startsWith(github.ref, 'refs/tags')
+    if: startsWith(github.ref, 'refs/tags') && !github.event.pull_request.draft
     runs-on: ubuntu-latest
     needs: goreleaser
     strategy:
@@ -297,7 +297,7 @@ jobs:
           docker run --rm test-${{ matrix.distro }}-${{ matrix.arch }}
 
   upgrade-rpm:
-    if: startsWith(github.ref, 'refs/tags')
+    if: startsWith(github.ref, 'refs/tags') && !github.event.pull_request.draft
     needs: goreleaser
     runs-on: ubuntu-latest
     strategy:
@@ -349,7 +349,7 @@ jobs:
           docker run --rm test-${{ matrix.distro }}
 
   smoke-tests:
-    if: startsWith(github.ref, 'refs/tags')
+    if: startsWith(github.ref, 'refs/tags') && !github.event.pull_request.draft
     needs:
       - goreleaser
     runs-on: ubuntu-latest
