--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -245,9 +245,9 @@ jobs:
           - amd64
           - arm64
         distro:
-          - ubuntu:xenial
           - ubuntu:bionic
           - ubuntu:focal
+          - ubuntu:jammy
           - debian:bullseye
 
     steps:
