--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -110,11 +110,11 @@ jobs:
           whereis go
           go mod tidy
           go mod vendor
-          echo "Moving vendor"
-          cp -r -f vendor/* $GOPATH/src
-          rm -rf vendor
-          mkdir -p /go/src/github.com/TykTechnologies/tyk
-          cp -r ./* /go/src/github.com/TykTechnologies/tyk
+          #echo "Moving vendor"
+          #          cp -r -f vendor/* $GOPATH/src
+          #          rm -rf vendor
+          #          mkdir -p /go/src/github.com/TykTechnologies/tyk
+          #          cp -r ./* /go/src/github.com/TykTechnologies/tyk
 
       - uses: goreleaser/goreleaser-action@v3
         with:
