--- a/ci/goreleaser/goreleaser.yml
+++ b/ci/goreleaser/goreleaser.yml
@@ -9,6 +9,7 @@ builds:
   - id: std-linux
     flags:
       - -tags=goplugin
+      - trimpath
     gcflags:
       - all=-N
       - -l
@@ -22,6 +23,7 @@ builds:
   - id: std-arm64
     flags:
       - -tags=goplugin
+      - -trimpath
     gcflags:
       - all=-N
       - -l
