--- a/ci/goreleaser/goreleaser.yml
+++ b/ci/goreleaser/goreleaser.yml
@@ -9,9 +9,10 @@ builds:
   - id: std-linux
     flags:
       - -tags=goplugin
-      - trimpath
+      - -trimpath
     gcflags:
-      - all=-N
+      - all
+      - -N
       - -l
     ldflags:
       - -X github.com/TykTechnologies/tyk/gateway.VERSION={{.Version}} -X github.com/TykTechnologies/tyk/gateway.Commit={{.FullCommit}} -X github.com/TykTechnologies/tyk/gateway.buildDate={{.Date}} -X github.com/TykTechnologies/tyk/gateway.builtBy=goreleaser
@@ -25,7 +26,8 @@ builds:
       - -tags=goplugin
       - -trimpath
     gcflags:
-      - all=-N
+      - all
+      - -N
       - -l
     ldflags:
       - -X github.com/TykTechnologies/tyk/gateway.VERSION={{.Version}} -X github.com/TykTechnologies/tyk/gateway.Commit={{.FullCommit}} -X github.com/TykTechnologies/tyk/gateway.buildDate={{.Date}} -X github.com/TykTechnologies/tyk/gateway.builtBy=goreleaser
