--- a/ci/goreleaser/goreleaser.yml
+++ b/ci/goreleaser/goreleaser.yml
@@ -11,9 +11,7 @@ builds:
       - -tags=goplugin
       - -trimpath
     gcflags:
-      - all
-      - -N
-      - -l
+      - all=-N -l
     ldflags:
       - -X github.com/TykTechnologies/tyk/gateway.VERSION={{.Version}} -X github.com/TykTechnologies/tyk/gateway.Commit={{.FullCommit}} -X github.com/TykTechnologies/tyk/gateway.buildDate={{.Date}} -X github.com/TykTechnologies/tyk/gateway.builtBy=goreleaser
     goos:
@@ -26,9 +24,7 @@ builds:
       - -tags=goplugin
       - -trimpath
     gcflags:
-      - all
-      - -N
-      - -l
+      - all=-N -l
     ldflags:
       - -X github.com/TykTechnologies/tyk/gateway.VERSION={{.Version}} -X github.com/TykTechnologies/tyk/gateway.Commit={{.FullCommit}} -X github.com/TykTechnologies/tyk/gateway.buildDate={{.Date}} -X github.com/TykTechnologies/tyk/gateway.builtBy=goreleaser
     env:
