--- a/.github/workflows/api-tests.yml
+++ b/.github/workflows/api-tests.yml
@@ -85,18 +85,19 @@ jobs:
         token: ${{ secrets.ORG_GH_TOKEN }}
         submodules: true
         path: tyk-analytics
+        ref: fix/dashboard-build-go_version-and-go-install
         ref: ${{ steps.check_dashboard_branch.outputs.branch	 }}
 
     - name: start docker compose
-      run: docker-compose -f ci/ci_testing_env.yml up -d
+      run: docker-compose -f tyk-automated-tests/ci/ci_testing_env.yml up -d
       env:
+        GOLANG_VERSION: 1.17
         TYK_DB_LICENSEKEY: ${{secrets.DASH_LICENSE}}
         DASH_REPO_PATH: /home/runner/work/tyk/tyk/tyk-analytics
         GW_REPO_PATH: /home/runner/work/tyk/tyk/tyk
         GOPATH: /home/runner/work/tyk/tyk
         GOPRIVATE: github.com/TykTechnologies
         TOKEN: ${{ secrets.ORG_GH_TOKEN }}
-      working-directory: tyk-automated-tests
 
     - name: Install test dependecies
       run: |
