Try tyk-automated-tests changes

--- a/.github/workflows/api-tests.yml
+++ b/.github/workflows/api-tests.yml
@@ -60,7 +60,8 @@ jobs:
         repository: TykTechnologies/tyk-automated-tests
         token: ${{ secrets.ORG_GH_TOKEN }}
         path: tyk-automated-tests
-        ref: fix/dashboard-build-go_version-and-go-install
+# TODO: remove after merged to master
+        ref: 6c41b3907d3a154dc1b90a8d5c54fba230dd506d
 #        ref: ${{ steps.check_test_branch.outputs.branch	 }}
 
     - name: Check if dashboard branch exists
