Experiment without vendor

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -109,7 +109,7 @@ jobs:
           #mkdir -p /go/src || true
           #whereis go
           go mod tidy
-          go mod vendor
+          #go mod vendor
           #echo "Moving vendor"
           #          cp -r -f vendor/* $GOPATH/src
           #          rm -rf vendor
