--- a/ci/images/plugin-compiler/Dockerfile
+++ b/ci/images/plugin-compiler/Dockerfile
@@ -1,5 +1,5 @@
 ARG GOLANG_CROSS
-ARG TYK_GW_TAG
+ARG TYK_GW_COMMIT
 
 FROM tykio/golang-cross:${GOLANG_CROSS}
 LABEL description="Image for plugin development"
@@ -7,7 +7,7 @@ LABEL description="Image for plugin development"
 ENV TYK_GW_PATH=/go/src/github.com/TykTechnologies/tyk
 
 ENV GO111MODULE=on
-ENV GIT_TAG=$TYK_GW_TAG
+ENV GIT_COMMIT=$TYK_GW_COMMIT
 # This directory will contain the plugin source and will be
 # mounted from the host box by the user using docker volumes
 ENV PLUGIN_SOURCE_PATH=/plugin-source
